--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     <script src="script.js"></script>
+    <header>
+        <img src="Assets/acrtoLogo.svg" alt="logo" >
+        <ul class="navMenuList">
+            <li><a href="#" id="homePage">Home</a></li>
+            <li><a href="#" id="productsPage">Products</a></li>
+            <li><a href="#"id="aboutPage">About</a></li>
+        </ul>
+        <div class="accountSignIn">
+            <a href="#"><img src="Assets/accountIcon.svg" alt="accountIcon" id="accountIcon" ></a>
+            <a href="#">My Account</a>
+        </div>
+    </header>
 </body>
 </html>
