--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <div class="logo"><img src="Assets/acrtoLogo.svg" alt="logo" id="logoImg"></div>
         <ul class="navMenuList">
-            <li><a href="#" id="homePage">Home</a></li>
+            <li><a href="#" id="homePage">Homee</a></li>
             <li><a href="#" id="productsPage">Products</a></li>
             <li><a href="#"id="aboutPage">About</a></li>
         </ul>
